messageList is now 90% width - this prevents interference when trying to click a channel; also aligned messages to the left

--- a/client/public/CSS/RoomList.css
+++ b/client/public/CSS/RoomList.css
@@ -16,6 +16,7 @@
 
 .rooms-list li {
     margin: 10px 0;
+    padding: 4px;
 }
 
 .rooms-list h3 {
